[metadata]
name = software_client
summary = Unified Software Management Client
description = file: README.rst
author = StarlingX Team
author_email = starlingx-discuss@lists.starlingx.io
home_page = https://www.starlingx.io/
license_files = LICENSE
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    software=software_client.software_client:main

[wheel]
universal = 1
