[metadata]
name = software
summary = A Project Gating System
description_file =
    README.rst
author = StarlingX Team
author_email = starlingx-discuss@lists.starlingx.io
home_page = https://www.starlingx.io/
python_requires = >=3.9
license_files = LICENSE
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[files]
packages =
    software

[entry_points]
console_scripts =
    software = software.software_client:main
    software-controller-daemon = software.software_controller:main
    software-agent = software.software_agent:main

[wheel]
universal = 1
