[metadata]
name = software
version = attr: software.VERSION
summary = Unified Software Management
description = file: README.rst
author = StarlingX Team
author_email = starlingx-discuss@lists.starlingx.io
home_page = https://www.starlingx.io/
license_files = LICENSE
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pycryptodomex

[options.packages.find]
exclude =
    software.tests*

[options.package_data]
* =
    templates/*

[options.entry_points]
console_scripts =
    software-controller-daemon = software.software_controller:main
    software-agent = software.software_agent:main
    software-migrate = software.utilities.migrate:migrate
    software-deploy-update = software.utilities.update_deploy_state:update_state
    software-deploy-activate = software.utilities.activate:activate
    software-deploy-activate-rollback = software.utilities.activate_rollback:activate_rollback
    software-deploy-set-failed = software.utilities.deploy_set_failed:deploy_set_failed


[wheel]
universal = 1
